spring-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: spring-pod
spec:
  containers:
  - name: spring-container
    image: spring-server
    ports:
    - containerPort: 8080
    imagePullPolicy: Never 
---
apiVersion: v1
kind: Pod

metadata:
  name: mariadb-pod
  labels:
    app: mariadb
spec:
  containers:
  - name: mariadb
    image: mariadb:10.6 
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
