api-db-svc-ing-ness.yaml
apiVersion: v1
kind: Pod

metadata:
  name: spring-pod
spec:
  containers:
  - name: spring-container
    image: spring-server
    ports:
    - containerPort: 8080
    imagePullPolicy: Never
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 30
      periodSeconds: 10

---
apiVersion: v1
kind: Pod

metadata:
  name: mariadb-pod
  labels:
    app: mariadb
spec:
  containers:
  - name: mariadb
    image: mariadb:10.6 
    ports:
      - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-ingress
spec:
  rules:
  - host: commerce.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb
            port:
              number: 8080
